# mod_backtracking

./: CMakeLists.txt  alignmentRange.cpp  benchmark.cpp  bitest.cpp  checkAlignment.cpp  test2.cpp  testbacktracking.cpp
